# djangocms-stories

./: .gitignore  .readthedocs.yml  CHANGELOG.rst  LICENSE  README.rst  pyproject.toml  run_tests.py  tasks.py  tox.ini
.github/workflows/: migraton_test.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  tests.yml
djangocms_blog/: __init__.py  apps.py  cms_appconfig.py  cms_apps.py  cms_config.py  managers.py  models.py  settings.py  urls.py
djangocms_blog/migrations/: 0001_initial.py  0001_squashed_0051_alter_blogconfig_type_and_more.py  0006_auto_20150214_1907.py  0007_auto_20150719_0933.py  0008_auto_20150814_0831.py  0010_auto_20150923_1151.py  0011_auto_20151024_1809.py  0022_auto_20170304_1040.py  0028_auto_20170304_1040.py  0040_auto_20211128_1503.py  0041_auto_20230720_1508.py  0042_alter_authorentriesplugin_cmsplugin_ptr_and_more.py  0043_postcontent.py  0044_copy_plugins.py  0045_auto_20230314_0747.py  0047_migrate_config.py  0048_alter_blogcategory_options_and_more.py  0049_remove_blogconfig_urlconf_alter_blogcategory_id_and_more.py  0050_merge_20250603_0915.py  0051_alter_blogconfig_type_and_more.py  0052_alter_authorentriesplugin_authors_and_more.py
djangocms_stories/: .pre-commit-config.yaml  __init__.py  addon.json  admin.py  apps.py  cms_appconfig.py  cms_apps.py  cms_config.py  cms_menus.py  cms_plugins.py  cms_toolbars.py  cms_wizards.py  feeds.py  fields.py  forms.py  managers.py  models.py  settings.py  sitemaps.py  urls.py  utils.py  views.py
djangocms_stories/locale/ar/LC_MESSAGES/: django.mo  django.po
djangocms_stories/locale/de/LC_MESSAGES/: django.mo  django.po
djangocms_stories/locale/en/LC_MESSAGES/: django.po
djangocms_stories/locale/es/LC_MESSAGES/: django.mo  django.po
djangocms_stories/locale/et/LC_MESSAGES/: django.mo  django.po
djangocms_stories/locale/fr/LC_MESSAGES/: django.mo  django.po
djangocms_stories/locale/it/LC_MESSAGES/: django.mo  django.po
djangocms_stories/locale/lt/LC_MESSAGES/: django.mo  django.po
djangocms_stories/locale/nb_NO/LC_MESSAGES/: django.mo  django.po
djangocms_stories/locale/nl/LC_MESSAGES/: django.mo  django.po
djangocms_stories/locale/pl/LC_MESSAGES/: django.mo  django.po
djangocms_stories/locale/pl_PL/LC_MESSAGES/: django.po
djangocms_stories/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
djangocms_stories/locale/ru/LC_MESSAGES/: django.mo  django.po
djangocms_stories/locale/sl/LC_MESSAGES/: django.mo  django.po
djangocms_stories/locale/tr/LC_MESSAGES/: django.mo  django.po
djangocms_stories/migrations/: 0001_initial.py  0002_auto_20250618_1556.py  0003_alter_post_options_alter_postcontent_options_and_more.py
djangocms_stories/sitemaps/: __init__.py
djangocms_stories/templates/admin/djangocms_versioning/djangocms_blog/postcontent/: versioning_breadcrumbs.html
djangocms_stories/templates/djangocms_stories/: base.html  category_list.html  post_archive.html  post_detail.html  post_list.html
djangocms_stories/templates/djangocms_stories/includes/: blog_item.html  blog_meta.html  category_item.html  post_item.html  post_meta.html
djangocms_stories/templates/djangocms_stories/plugins/: archive.html  authors.html  authors_posts.html  featured_posts.html  latest_entries.html  tags.html
djangocms_stories/templatetags/: djangocms_blog.py  djangocms_stories.py
docs/: Makefile  conf.py  django_settings.py  requirements.in  requirements.txt
docs/autodoc/: settings.rst
docs/features/: home.rst  urlconf.rst
docs/source/: index.rst
docs/source/explanations/: content-wizard.rst  index.rst  media-plugins.rst  versioning.rst
docs/source/how-tos/: attach-to-home.rst  custom-templates.rst  custom-urlconf.rst  feeds-and-sitemaps.rst  index.rst  migration-from-blog.rst  multiple-configurations.rst  seo-optimization.rst
docs/source/reference/: admin.rst  forms.rst  index.rst  managers.rst  models.rst  settings.rst  signals.rst  templatetags.rst  views.rst
docs/source/tutorial/: customization.rst  first-story.rst  index.rst  installation.rst
tests/: base.py  base_test.py  base_urls.py  conftest.py  factories.py  settings.py  test_admin.py  test_apphook.py  test_category_models.py  test_cms_appconfig.py  test_extension.py  test_extensions.py  test_feeds.py  test_forms.py  test_indexing.py  test_managers.py  test_media.py  test_menu.py  test_menus.py  test_migration_completeness.py  test_models.py  test_plugins.py  test_post_models.py  test_setup.py  test_sitemap.py  test_templatetags.py  test_toolbar.py  test_views.py  test_wizards.py  utils.py  x_test_wizards.py
tests/fixtures/: __init__.py  app_configs.py  apphook_page.py  posts.py  thumbnails.py
tests/requirements/: base.txt  dj42_cms41.txt  dj42_cms50.txt  dj52_cms41.txt  dj52_cms50.txt
tests/test_migrations/: fixtures.py  post.py  run.py  run_migration_tests.py  settings_pre.py
tests/test_utils/: admin.py  models.py  urls.py
tests/test_utils/migrations/: 0002_auto_20200516_1230.py  0003_remove_postplaceholderextension_some_placeholder_and_more.py
tests/test_utils/templates/: base.html
